--- a/jobsheet3_PraktikumRegresi.ipynb
+++ b/jobsheet3_PraktikumRegresi.ipynb
@@ -23,13 +23,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AfifahNofa/MachineLearning_2023/blob/main/jobsheet3_PraktikumRegresi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AfifahNofa/MachineLearning_2023/blob/main/jobsheet2_PraktikumEkstraksiFitur.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**JOBSHEET 3 - REGRESI**\n",
+        "**JOBSHEET 2 - ekstraksi fitur**\n",
         "\n",
         "\n",
         "**PRAKTIKUM 1 – Pra Pengolahan Data-Data Terstruktur**\n",
